fixed frames shifting when adding new frame to the list

--- a/src/components/framescontainer/framescontainer.styl
+++ b/src/components/framescontainer/framescontainer.styl
@@ -47,6 +47,7 @@
   &__frames
     flex-grow: 1
     display: block
+    min-height: 101px
     padding-left: 10px
     overflow: auto
     overflow-y: hidden
@@ -58,7 +59,7 @@
       position: relative
       display: inline-block
       margin: 5px 0
-      vertical-align: top
+      vertical-align: middle
       border: 4px dashed #1b2631
       fill: #1b2631
       transition: border-color 200ms, fill 200ms
